--- a/.github/workflows/merge-master-to-develop.yml
+++ b/.github/workflows/merge-master-to-develop.yml
@@ -8,4 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: get checkout master
+      - run: git fetch
+      - run: git pull
+      - run: git checkout develop
       - run: git merge master
